Added GitHub link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>World Clock</h1>
     <footer>
       🙋🏻‍♀️ This project was coded by Hiromi Tanimura, and it is
-      <a href="#" target="_blank">open-sourced</a>.
+      <a href="https://github.com/hiromirhondalee/world-clock" target="_blank">open-sourced</a>.
     </footer>
 
     <script src="src/index.js"></script>
