--- a/index.html
+++ b/index.html
@@ -8,10 +8,34 @@
     <title>World Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+      <span class="logo"
+        ><img src="images/LOGO.png" width="30px" alt=""
+      /></span>
+      <div>
+        <select>
+          <option value="">Select a city...</option>
+          <option value="london">London</option>
+          <option value="newyork">New York</option>
+          <option value="sydney">Sydney</option>
+        </select>
+      </div>
+      <div class="city">
+        <h2>Tokyo 🇯🇵</h2>
+        <div class="date">December 1st 2022</div>
+        <div class="time">12:35:15 PM</div>
+      </div>
+      <div class="city">
+        <h2>London 🇬🇧</h2>
+        <div class="date">December 1st 2022</div>
+        <div class="time">12:35:15 AM</div>
+      </div>
     <footer>
       🙋🏻‍♀️ This project was coded by Hiromi Tanimura, and it is
-      <a href="https://github.com/hiromirhondalee/world-clock" target="_blank">open-sourced</a>.
+      <a href="https://github.com/hiromirhondalee/world-clock" target="_blank"
+        >open-sourced</a
+      >.
     </footer>
 
     <script src="src/index.js"></script>
