--- a/index.html
+++ b/index.html
@@ -18,26 +18,32 @@
         /></span>
       </div>
       <div>
-        <select>
+        <select id="city">
           <option value="">Select a city...</option>
-          <option value="london">London</option>
-          <option value="newyork">New York</option>
-          <option value="sydney">Sydney</option>
+          <option value="Asia/Tokyo">Tokyo 🇯🇵</option>
+          <option value="Europe/London">London 🇬🇧</option>
+          <option value="America/New_York">New York 🇺🇸</option>
+          <option value="Australia/Sydney">Sydney 🇦🇺</option>
+          <option value="Africa/Johannesburg">Johannesburg 🇿🇦</option>
+           <option value="America/Buenos_Aires">Buenos Aires 🇦🇷</option>
+           <option value="Singapore">Singapore 🇸🇬</option>
         </select>
       </div>
+      <div id="cities">
       <div class="city" id="tokyo">
         <div>
           <h2>Tokyo 🇯🇵</h2>
-          <div class="date">December 1st 2022</div>
+          <div class="date"></div>
         </div>
-        <div class="time">12:35:15 <small>PM</small></div>
+        <div class="time"></div>
       </div>
       <div class="city" id="london">
         <div>
           <h2>London 🇬🇧</h2>
-          <div class="date">December 1st 2022</div>
+          <div class="date"></div>
         </div>
-        <div class="time">12:35:15 <small>AM</small></div>
+        <div class="time"></div>
+      </div>
       </div>
     </div>
     <footer>
