--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div>
         <select id="city">
           <option value="">Select a city...</option>
+          <option value="current">Current Location 📍</option>
           <option value="Asia/Tokyo">Tokyo 🇯🇵</option>
           <option value="Europe/London">London 🇬🇧</option>
           <option value="America/New_York">New York 🇺🇸</option>
