--- a/index.html
+++ b/index.html
@@ -26,25 +26,32 @@
           <option value="America/New_York">New York 🇺🇸</option>
           <option value="Australia/Sydney">Sydney 🇦🇺</option>
           <option value="Africa/Johannesburg">Johannesburg 🇿🇦</option>
-           <option value="America/Buenos_Aires">Buenos Aires 🇦🇷</option>
-           <option value="Singapore">Singapore 🇸🇬</option>
+          <option value="America/Buenos_Aires">Buenos Aires 🇦🇷</option>
+          <option value="Singapore">Singapore 🇸🇬</option>
         </select>
       </div>
       <div id="cities">
-      <div class="city" id="tokyo">
-        <div>
-          <h2>Tokyo 🇯🇵</h2>
-          <div class="date"></div>
+        <div class="city" id="tokyo">
+          <div>
+            <h2>Tokyo 🇯🇵</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="london">
-        <div>
-          <h2>London 🇬🇧</h2>
-          <div class="date"></div>
+        <div class="city" id="london">
+          <div>
+            <h2>London 🇬🇧</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
+        <div class="city" id="newyork">
+          <div>
+            <h2>New York 🇺🇸</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
       </div>
     </div>
     <footer>
